--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,5 @@
-.App {
-  text-align: center;
-  height: 100vh;
-  background: linear-gradient(#53a0fd, #3023ae);
-  overflow-y: scroll;
+html {
+  box-sizing: border-box;
 }
 
-/* .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-} */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.button--add-tag {
-  border: 2px solid black;
-}
-
-/* style the add item input */
-#description { 
-  border: none;
-  border-bottom: 1px solid black;
-}
-
-/* list item styling */
-li {
-  list-style: none;
-}
