--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,96 @@ html {
   box-sizing: border-box;
 }
 
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
+body {
+  background: no-repeat linear-gradient(#53a0fd, #3023ae);
+  height: 100vh;
+  /* check if I can add avenir font here */
+}
+
+.App {
+  border: 1px solid black;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1200px; /* set the max-width for the page */
+}
+
+@media screen and (min-width: 800px) {
+  .App {
+    width: 80%;
+  }
+}
+
+/* styling for the top area and the delete button */
+nav {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 4rem 0;
+}
+
+button,
+#button--add-tag,
+#button--delete {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+#button--delete span {
+  padding-right: 13px;
+}
+
+/* styling for the input area */
+#description {
+  border: none;
+  width: 250px;
+  background-color: transparent;
+  caret-color: #fff;
+  color: #fff;
+  border-bottom: 1px solid rgb(250, 250, 250, 0.7);
+  font-size: 18px;
+  font-weight: normal;
+  padding-left: 5px;
+  height: 3rem;
+}
+
+::placeholder {
+  color: #fff;
+  opacity: 0.3;
+}
+
+#button--add-tag {
+  padding: 0 0.5em;
+  position: relative;
+}
+
+#button--add-tag span {
+  margin-top: 20px;
+}
+
+/* Styling for the tag tool-tip */
+.dropdown--tags {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 100px;
+  /* justify-content: flex-start; */
+}
+
+.dropdown--tags input {
+  border: 1px solid black;
+
+}
+.tags {
+  
+  justify-content: flex-start;
+  /* font-size: 30px; */
+}
