--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,11 @@ body {
   /* check if I can add avenir font here */
 }
 
+li {
+  list-style: none;
+}
 .App {
-  border: 1px solid black;
-  width: 100%;
+  width: 97%;
   margin: 0 auto;
   max-width: 1200px; /* set the max-width for the page */
 }
@@ -50,18 +52,21 @@ button,
 }
 
 /* styling for the input area */
+#form-section {
+  display: flex;
+}
 #description {
   border: none;
-  width: 250px;
+  /* width: 250px; */
   background-color: transparent;
   caret-color: #fff;
   color: #fff;
-  border-bottom: 1px solid rgb(250, 250, 250, 0.7);
-  font-size: 18px;
+  font-size: 28px;
   font-weight: normal;
   padding-left: 5px;
   height: 3rem;
 }
+
 
 ::placeholder {
   color: #fff;
@@ -69,12 +74,32 @@ button,
 }
 
 #button--add-tag {
-  padding: 0 0.5em;
+  padding: 0 0 0 0.1em;
   position: relative;
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  background-color: #fff;
 }
 
-#button--add-tag span {
-  margin-top: 20px;
+#button--add {
+  margin-left: 1em;
+  padding: 0.4em 1.2em;
+  border-radius: 26.5px;
+  color: #fff;
+  font-weight: lighter;
+  background-color: #383ebf;
+  line-height: 1.3em;
+}
+
+#button--add:hover {
+ opacity: 0.8; 
+}
+
+.tag-and-tooltip {
+  display: inline;
+  position: relative;
 }
 
 /* Styling for the tag tool-tip */
@@ -82,16 +107,213 @@ button,
   display: flex;
   flex-direction: column;
   position: absolute;
-  width: 100px;
-  /* justify-content: flex-start; */
+  left: -150%;
+  width: 170px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 0.8rem 0;
+  box-shadow: 0 0 14px 10px rgba(0, 0, 0, 0.13);
 }
 
-.dropdown--tags input {
-  border: 1px solid black;
-
+.dropdown--tags:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  top: -25px;
+  left: 40%;
+  border-top: 15px solid transparent;
+  border-left: 15px solid transparent;
+  border-bottom: 15px solid #fff;
+  border-right: 15px solid transparent;
 }
-.tags {
+
+/* https://medium.com/claritydesignsystem/pure-css-
+accessible-checkboxes-and-radios-buttons-54063e759bb3 */
+.checkbox {
+  padding: 0.4em 0;
+}
+
+.checkbox input[type="checkbox"] {
+  opacity: 0;
+}
+.checkbox label {
+  position: relative;
+  cursor: pointer;
+}
+
+.checkbox label::before {
+  content: "";
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  margin-right: 10px;
+  border-radius: 50px;
+}
+
+.checkbox label[for="Personal"]::before,
+#tagname-Personal::before {
+  background-color: #9eccc6;
+}
+
+.checkbox label[for="Travel"]::before,
+#tagname-Travel::before {
+  background-color: #43cbf2;
+}
+
+.checkbox label[for="Work"]::before,
+#tagname-Work::before {
+  background-color: #eb5047;
+}
+
+.checkbox label[for="Family"]::before,
+#tagname-Family::before {
+  background-color: #9013fe;
+}
+
+.checkbox label[for="Fun"]::before,
+#tagname-Fun::before {
+  background-color: #2bc562;
+}
+
+.checkbox label::before {
+  top: 3px;
+}
+.checkbox label::after {
+  display: inline-block;
+
+  height: 5px;
+  width: 9px;
+  padding-left: 30px;
+}
+
+/* hiding the checkmark */
+.checkbox input[type="checkbox"] + label::after {
+  content: none;
+}
+
+.checkbox input[type="checkbox"]:checked + label::after {
+  content: "✔";
+}
+
+/* making it accessible */
+.checkbox input[type="checkbox"]:focus + label::before {
+  outline: rgb(59, 153, 252) auto 5px;
+}
+
+/* Styling for the list items */
+.item-checkbox input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+}
+
+.item-checkbox label::before {
+  content: "";
+  display: inline-block;
+
+  height: 23px;
+  width: 23px;
+
+  border-radius: 50px;
+}
+
+.item-checkbox label::after {
+  content: "";
+  display: inline-block;
+
+  height: 10px;
+  width: 15px;
+  border-left: 2px solid #3023ae;
+  border-bottom: 2px solid #3023ae;
+
+  transform: rotate(-45deg);
+}
+
+.item-checkbox label {
+  position: relative;
+  cursor: pointer;
+
+  font-size: 20px;
+  font-weight: normal;
+  color: #fff;
+  padding-right: 20px;
   
-  justify-content: flex-start;
-  /* font-size: 30px; */
+}
+
+.item-checkbox label::after {
+  position: absolute;
+}
+
+.item-checkbox {
+  display: inline-block;
+  /* padding-bottom: 10px; */
+}
+
+/* Outside box */
+.item-checkbox label::before {
+  top: 0px;
+  margin-right: 15px;
+
+  background-color: #fff;
+}
+
+.item-checkbox label::after {
+  left: 4px;
+  top: 0px;
+}
+
+.item-checkbox input[type="checkbox"] + label::after {
+  content: none;
+}
+
+.item-checkbox input[type="checkbox"]:checked + label::after {
+  content: "";
+}
+
+.item-checkbox input[type="checkbox"]:focus + label::before {
+  outline: rgb(59, 153, 252) auto 5px;
+}
+
+.item-checkbox input[type="checkbox"]:checked + label {
+  text-decoration: line-through;
+  opacity: 0.7;
+}
+/* Styling the individual tags */
+ul {
+  padding: 0;
+}
+.single-item {
+  margin-bottom: 25px;
+
+}
+.item-tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.item--tag {
+  border: 1px solid #fff;
+  border-radius: 50px;
+  padding: 0.02em 1em 0.02em 2em;
+  color: #424242;
+  background-color: #fff;
+  font-size: 13px;
+  position: relative;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.item--tag::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+
+  left: 10px;
+  top: 4px;
+
+  border-radius: 50px;
+  background-color: red;
 }
