--- a/src/App.css
+++ b/src/App.css
@@ -57,12 +57,11 @@ button,
 }
 #description {
   border: none;
-  /* width: 250px; */
   background-color: transparent;
   caret-color: #fff;
   color: #fff;
   font-size: 28px;
-  font-weight: normal;
+  font-weight: lighter;
   padding-left: 5px;
   height: 3rem;
 }
@@ -91,6 +90,7 @@ button,
   font-weight: lighter;
   background-color: #383ebf;
   line-height: 1.3em;
+  transition: opacity 0.2s;
 }
 
 #button--add:hover {
@@ -209,13 +209,14 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
 }
 
 .item-checkbox label::before {
-  content: "";
+  content: "\a";
   display: inline-block;
 
   height: 23px;
   width: 23px;
 
   border-radius: 50px;
+  white-space: pre;
 }
 
 .item-checkbox label::after {
@@ -237,7 +238,7 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
   font-size: 20px;
   font-weight: normal;
   color: #fff;
-  padding-right: 20px;
+  padding-right: 10px;
   
 }
 
@@ -247,20 +248,19 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
 
 .item-checkbox {
   display: inline-block;
-  /* padding-bottom: 10px; */
 }
 
 /* Outside box */
 .item-checkbox label::before {
   top: 0px;
-  margin-right: 15px;
+  margin-right: 20px;
 
   background-color: #fff;
 }
 
 .item-checkbox label::after {
   left: 4px;
-  top: 0px;
+  top: 4px;
 }
 
 .item-checkbox input[type="checkbox"] + label::after {
@@ -284,7 +284,7 @@ ul {
   padding: 0;
 }
 .single-item {
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 
 }
 .item-tags {
