--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,9 @@ button,
   font-weight: lighter;
 }
 
+#button--remove {
+  font-size: 27px;
+}
 #button--delete span {
   padding-right: 13px;
 }
@@ -54,16 +57,20 @@ button,
 /* styling for the input area */
 #form-section {
   display: flex;
+  border: 1px solid black;
+  align-items: center;
 }
+
 #description {
   border: none;
   background-color: transparent;
+  width: 300px;
   caret-color: #fff;
   color: #fff;
-  font-size: 28px;
-  font-weight: lighter;
+  font-size: 48px;
+  font-weight: bold;
   padding-left: 5px;
-  height: 3rem;
+  height: 2rem;
 }
 
 
@@ -212,8 +219,8 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
   content: "\a";
   display: inline-block;
 
-  height: 23px;
-  width: 23px;
+  height: 38px;
+  width: 38px;
 
   border-radius: 50px;
   white-space: pre;
@@ -224,7 +231,7 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
   display: inline-block;
 
   height: 10px;
-  width: 15px;
+  width: 19px;
   border-left: 2px solid #3023ae;
   border-bottom: 2px solid #3023ae;
 
@@ -235,8 +242,8 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
   position: relative;
   cursor: pointer;
 
-  font-size: 20px;
-  font-weight: normal;
+  font-size: 36px;
+  font-weight: bold;
   color: #fff;
   padding-right: 10px;
   
@@ -259,8 +266,8 @@ accessible-checkboxes-and-radios-buttons-54063e759bb3 */
 }
 
 .item-checkbox label::after {
-  left: 4px;
-  top: 4px;
+  left: 10px;
+  top: 13px;
 }
 
 .item-checkbox input[type="checkbox"] + label::after {
@@ -296,7 +303,7 @@ ul {
 .item--tag {
   border: 1px solid #fff;
   border-radius: 50px;
-  padding: 0.02em 1em 0.02em 2em;
+  padding: 0.4em 1em 0.4em 2em;
   color: #424242;
   background-color: #fff;
   font-size: 13px;
@@ -312,8 +319,7 @@ ul {
   height: 8px;
 
   left: 10px;
-  top: 4px;
+  top: 8px;
 
   border-radius: 50px;
-  background-color: red;
 }
